--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Insert here your title</title>
-        <meta name="description" content="Insert description." />
-        <meta name="keywords" content="insert, keywords" />
+        <title>Decidiamo! ma con tecnologia libera ed open source</title>
+        <meta name="description" content="Evoluzione libera ed aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive." />
+        <meta name="keywords" content="rousseau, m5s, democrazia, partecipativa, open source" />
         <meta charset="utf-8" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
@@ -19,13 +19,13 @@
         <meta property="og:type" content="" />
         <meta property="og:image" content="/img/large_picture.png" />
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@twitter_user">
-        <meta name="twitter:title" content="Title for twitter">
+        <meta name="twitter:site" content="@OpenRousseau">
+        <meta name="twitter:title" content="Decidiamo! ma con tecnologia libera ed open source!">
         <meta name="twitter:description"
-              content="Description for twitter" />
+              content="Evoluzione libera ed aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive." />
         <meta name="twitter:image" content="/img/large_picture.png">
         <!-- <link rel="shortcut icon" href="https://dyne.org/favicon.ico"> -->
-        <link rel="twitter" type="text/html" href="http://twitter.com/DyneOrg">
+        <link rel="twitter" type="text/html" href="http://twitter.com/OpenRousseau">
 
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
@@ -67,6 +67,14 @@ OpenRousseau nasce sulla base di [DECIDIM](https://decidim.org), soluzione con c
 
 OpenRousseau intende facilitare l’interazione fra cittadini, politici e attivisti permettendo l’accesso a proposte e decisioni direttamente da telefonini e tablet integrando con DECIDIM la versione [“Mobile Rousseau” sviluppata dal M5S](https://github.com/associazione-rousseau/camelot-flutter).
 
+## Chi siamo
+
+Guardiamo alla preziosa esperienza del Movimento 5 Stelle con l'Associazione Rousseau, ai suoi pregi (un grande movimento collaborativo e di stimolo partecipativo) ma anche ai suoi difetti (software di partecipazione privato e mancanza di sovranità digitale dei dati).
+
+Riteniamo che la comunità informatica italiana con il progetto OpenRousseau possa dare uno strumento alla volontà di organizzazione, partecipazione e potere del popolo.
+
+La nostra associazione, per ora ancora informale, e' [Decidiamo.it](http://decidiamo.it).
+
 ## Motivazioni
 
 Il Progetto OpenRousseau nasce dall’adozione di tecniche per la democrazia partecipata guardando primariamente all'esperienza del Movimento 5 Stelle con la nota “piattaforma Rousseau” ed all’esperienza di adozione in Spagna di tecnologie simili, ma libere e decentralizzate.
@@ -98,17 +106,14 @@ Il Backend sarà invece basato sul software Ruby on Rails Decidim, a cui saranno
 
 Riteniamo che le piattaforme tecnologiche di Democrazia Partecipata debbano rispettare i più rigidi criteri di trasparenza, riuso e sovranità digitale secondo i medesimi criteri definiti dall'Agenzia per l’Italia Digitale (Ora Ministero Innovazione Tecnologica): **il software deve essere completamente open source**.
 
-Guardando alla preziosa esperienza del Movimento 5 Stelle con l'Associazione Rousseau, ai suoi pregi (un grande movimento collaborativo e di stimolo partecipativo) ma anche ai suoi difetti (software di partecipazione privato e mancanza di sovranità digitale dei dati), riteniamo che la comunità tecnico-informatica italiana con il progetto OpenRousseau possa dare una risposta alla volontà di organizzazione e partecipazione di Movimenti e Partiti.
-
 				</markdown>
-
             </div>
         </section>
 
         <section class="section">
             <div class="container">
                 <h1 class="title">Partecipa</h1>
-                <h2 class="subtitle">Il Progetto Open Rousseau si coordina e sviluppa in modo trasparente e aperto</h2>
+                <h2 class="subtitle">Il Progetto Open Rousseau si coordina e sviluppa in modo trasparente e aperto</h2>				
                 <p class="has-text-centered">
 				<a href="https://github.com/openrousseau"><i class="fab fa-github"></i> OpenRousseau su GitHub</a> <br />
                 <a href="https://twitter.com/OpenRousseau"><i class="fab fa-twitter"></i> OpenRousseau su Twitter</a> <br />
@@ -120,8 +125,6 @@ Guardando alla preziosa esperienza del Movimento 5 Stelle con l'Associazione Rou
         <footer class="footer has-text-centered has-text-weight-light">
                         <p>Tutti i materiali contenuti in questa pagina sono liberi</p>
                         <p>Creative Commons (<a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" style="color: #000">BY-NC-SA 3.0</a>)</p>
-						<p><a href="https://twitter.com/OpenRousseau" data-show-count="false" data-size="small" style="padding: 0 2em"><i class="fab fa-twitter"></i> Follow</a></p>
-
         </footer>
         <script type="text/javascript" src="lib/main.js"></script>
         <!-- <script src="https://code.jquery.com/jquery-latest.min.js"></script> -->
