--- a/views/index.html
+++ b/views/index.html
@@ -203,7 +203,7 @@
             </div>
         </div>
     </section>
-    <section class="alternateblock">
+    <section>
         <div class="container position-relative py-2 py-md-4">
             <div class="row d-flex align-items-center px-4 px-md-0 py-2 py-md-5">
                 <div class="col-sm-6 order-md-2 text-center py-3 py-md-0">
@@ -236,8 +236,10 @@
         </div>
     </section>
     
-    <div id="gg" class="container my-4">
-        <markdown>
+    <div id="gg" class="container my-4 p-4">
+        <div class="row">
+            <div class="col-12">
+                <markdown>
 # Cos'è Open Rousseau
 
 OpenRousseau nasce sulla base di [DECIDIM](https://decidim.org), soluzione con codice libero di democrazia partecipata, [già impiegato con successo a Barcellona](https://www.forumpa.it/pa-digitale/infrastrutture-digitali-democratiche-per-la-partecipazione-dei-cittadini-la-piattaforma-decidim-barcelona/) per il 75% dei suoi bandi di appalto.
@@ -282,34 +284,35 @@ Il Backend sarà invece basato sul software Ruby on Rails Decidim, a cui saranno
 ## Democrazia Partecipata secondo le Linee Guida dell’Agenzia Italia Digitale
 
 Riteniamo che le piattaforme tecnologiche di Democrazia Partecipata debbano rispettare i più rigidi criteri di trasparenza, riuso e sovranità digitale secondo i medesimi criteri definiti dall'Agenzia per l’Italia Digitale (Ora Ministero Innovazione Tecnologica): **il software deve essere completamente open source**.
-            
-        </markdown>
+                </markdown>
+            </div>
+        </div>
     </div>
 
     <section id="partecipa">
-        <div class="container">
+        <div class="container p-4">
             <div class="mb-3 mb-md-5 text-white">
                 <h1>Partecipa</h1>
-                <h2 class="subtitle">Il Progetto Open Rousseau si coordina e sviluppa in modo trasparente e aperto</h2>				
+                <h2>Il Progetto Open Rousseau si coordina e sviluppa in modo trasparente e aperto</h2>				
                 <div class="row mt-5">
-                    <div class="col-md-4 col-sm-4">
-                        <a href="http://github.com/decidiamo" class="btn btn-outline-secondary btn-lg btn-icon">
+                    <div class="col-md-4 col-sm-4 mb-2">
+                        <a href="http://github.com/decidiamo" class="btn btn-outline-secondary btn-icon">
                             <span class="rounded-icon">
-                              <svg class="icon icon-success"><use xlink:href="/assets/sprite.svg#it-github"></use></svg>
+                              <svg class="icon icon-secondary"><use xlink:href="/assets/sprite.svg#it-github"></use></svg>
                             </span>
                             <span>Github</span>
                         </a>
                     </div>
-                    <div class="col-md-4 col-sm-4">
-                        <a href="http://twitter.com/OpenRousseau" class="btn btn-outline-secondary btn-lg btn-icon">
+                    <div class="col-md-4 col-sm-4 mb-2">
+                        <a href="http://twitter.com/OpenRousseau" class="btn btn-outline-secondary btn-icon">
                             <span class="rounded-icon">
-                              <svg class="icon icon-success"><use xlink:href="/assets/sprite.svg#it-twitter"></use></svg>
+                              <svg class="icon icon-secondary"><use xlink:href="/assets/sprite.svg#it-twitter"></use></svg>
                             </span>
                             <span>Twitter</span>
                         </a>
                     </div>
-                    <div class="col-md-4 col-sm-4">
-                        <a href="http://t.me/openrousseau" class="btn btn-outline-secondary btn-lg btn-icon">
+                    <div class="col-md-4 col-sm-4 mb-2">
+                        <a href="http://t.me/openrousseau" class="btn btn-outline-secondary btn-icon">
                             <span class="rounded-icon">
                               <i class="fab fa-telegram icon"></i>
                             </span>
