🍱 Some more vignettes and minor adjustments

--- a/views/index.html
+++ b/views/index.html
@@ -178,10 +178,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-white max-w-40 mt-5">
+                    <h2 class="text-white max-w-40 mt-5 mb-5">
                         Open Rousseau è l’evoluzione libera ed aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive.<br>
                         La sua natura di software libero permette la sovranità digitale, cioè l’uso indipendente del sistema da parte di qualsiasi organizzazione.
                     </h2>
+                </div>
+                <div class="col-12 mt-5 text-center">
+                    <a class="btn btn-outline-primary bg-white" href="#gg">Per saperne di più</a>
                 </div>
             </div>
         </div>
@@ -194,7 +197,7 @@
                 </div>
                 
                 <div class="col-sm-6 order-2">
-                    <h1 class="m-md-3">il potere di una rete politica</h1>
+                    <h1 class="m-md-3">Il potere di una rete politica</h1>
                     <div class="m-md-3">
                         <p>Richiede deliberazione, collaborazione e decisione in una dimensione enorme, con migliaia di persone che partecipano in tempo reale.
                         Contribuisci alle piattaforme abilitanti</p>
@@ -211,7 +214,7 @@
                 </div>
                 
                 <div class="col-sm-6 order-md-1">
-                    <h1 class="m-md-3 text-md-right">iniziative e consultazioni dei cittadini</h1>
+                    <h1 class="m-md-3 text-md-right">Iniziative e consultazioni dei cittadini</h1>
                     <div class="m-md-3 text-md-right">
                         <p>Dai potere alla tua comunità attraverso iniziative dei cittadini. Promuovere votazioni pertinenti tramite consultazioni.</p>
                     </div>                    
@@ -223,13 +226,31 @@
         <div class="container position-relative py-2 py-md-4">
             <div class="row d-flex align-items-center px-4 px-md-0 py-2 py-md-5">
                 <div class="col-sm-6 order-1 text-center py-3 py-md-0">
-                    <img src="/assets/bilancio.svg" alt="Bilanci partecipativi" class="img-fluid">
+                    <img src="/assets/democrazia.svg" alt="OpenRousseau sicuro e trasparente" class="img-fluid">
                 </div>
                 
                 <div class="col-sm-6 order-2">
-                    <h1 class="m-md-3">bilanci partecipativi</h1>
+                    <h1 class="m-md-3">Prendiamo la democrazia molto seriamente</h1>
                     <div class="m-md-3">
-                        <p>Analizza le proposte presentate e promuove un nuovo modo di distribuire risorse comuni.</p>
+                        <p>OpenRousseau garantisce trasparenza, tracciabilità e integrità delle informazioni come mai prima d'ora. Fornisce sicurezza, privacy e riservatezza a tutti i partecipanti.</p>
+                    </div>                    
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container position-relative py-2 py-md-4">
+            <div class="row d-flex align-items-center px-4 px-md-0 py-2 py-md-5">
+                <div class="col-sm-6 order-md-2 text-center py-3 py-md-0">
+                    <img src="/assets/floss.svg" alt="Software libero" class="img-fluid">
+                </div>
+                
+                <div class="col-sm-6 order-md-1">
+                    <h1 class="m-md-3 text-md-right">È tua. Condividila. Migliorala.</h1>
+                    <div class="m-md-3 text-md-right">
+                        <p>
+                            Una piattaforma progettata interamente con software libero, contenuti aperti e collaborativo grazie alla community <a href="https://decidiamo.it">Decidiamo.it</a>
+                        </p>
                     </div>                    
                 </div>
             </div>
@@ -252,7 +273,7 @@ Guardiamo alla preziosa esperienza del Movimento 5 Stelle con l'Associazione Rou
 
 Riteniamo che la comunità informatica italiana con il progetto OpenRousseau possa dare uno strumento alla volontà di organizzazione, partecipazione e potere del popolo.
 
-La nostra associazione, per ora ancora informale, e' [Decidiamo.it](http://decidiamo.it).
+La nostra associazione, per ora ancora informale, è [Decidiamo.it](http://decidiamo.it).
 
 ## Motivazioni
 
@@ -272,8 +293,9 @@ Con Open Rousseau vogliamo che sia possibile per qualsiasi soggetto politico e i
 ## Componenti software
 
 I software che abilitano la collaborazione di comunità attraverso la rete sono tipicamente composti da diverse componenti software, siano esse web o mobile, comunemente riferite come:
-Frontend: Il Client (cioè la “app” per il telefonino o il sito web)
-Backend: Il Server (che custodisce e tratta i dati, garantisce l’integrità e funzionalità)
+
+* Frontend: Il Client (cioè la “app” per il telefonino o il sito web)
+* Backend: Il Server (che custodisce e tratta i dati, garantisce l’integrità e funzionalità)
 
 Il Progetto OpenRousseau deve indirizzare la piena compatibilità applicativa con le 14 funzionalità erogate come servizio SAAS dalla Associazione Rousseau.
 
@@ -295,7 +317,7 @@ Riteniamo che le piattaforme tecnologiche di Democrazia Partecipata debbano risp
                 <h1>Partecipa</h1>
                 <h2>Il Progetto Open Rousseau si coordina e sviluppa in modo trasparente e aperto</h2>				
                 <div class="row mt-5">
-                    <div class="col-md-4 col-sm-4 mb-2">
+                    <div class="col-md-4 col-sm-4 mb-4 text-center">
                         <a href="http://github.com/decidiamo" class="btn btn-outline-secondary btn-icon">
                             <span class="rounded-icon">
                               <svg class="icon icon-secondary"><use xlink:href="/assets/sprite.svg#it-github"></use></svg>
@@ -303,7 +325,7 @@ Riteniamo che le piattaforme tecnologiche di Democrazia Partecipata debbano risp
                             <span>Github</span>
                         </a>
                     </div>
-                    <div class="col-md-4 col-sm-4 mb-2">
+                    <div class="col-md-4 col-sm-4 mb-4 text-center">
                         <a href="http://twitter.com/OpenRousseau" class="btn btn-outline-secondary btn-icon">
                             <span class="rounded-icon">
                               <svg class="icon icon-secondary"><use xlink:href="/assets/sprite.svg#it-twitter"></use></svg>
@@ -311,7 +333,7 @@ Riteniamo che le piattaforme tecnologiche di Democrazia Partecipata debbano risp
                             <span>Twitter</span>
                         </a>
                     </div>
-                    <div class="col-md-4 col-sm-4 mb-2">
+                    <div class="col-md-4 col-sm-4 mb-4 text-center">
                         <a href="http://t.me/openrousseau" class="btn btn-outline-secondary btn-icon">
                             <span class="rounded-icon">
                               <i class="fab fa-telegram icon"></i>
