--- a/views/index.html
+++ b/views/index.html
@@ -405,7 +405,7 @@ Riteniamo che le piattaforme tecnologiche di Democrazia Partecipata debbano risp
                             </p>
                             <br>
                             <p>
-                                Questo sito è stato realizzato grazie all'importante contributo di tutti i membri della comunità open source, e in particolare agli sviluppatori coinvolti nei seguenti progetti:
+                                Questo sito è stato realizzato grazie all'importante contributo di tutti i membri della comunità open source, e in particolare alle sviluppatrici e designer coinvolti nei seguenti progetti:
                                 <div class="link-list-wrapper">
                                     <ul class="footer-list link-list clearfix">
                                         <li><a href="https://www.dyne.org/software/webnomad/">Webnomad</a></li>
