💄 Visual cleanup and formatting

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -45,10 +45,17 @@ html {
 }
 
 #partecipa {
-    background-color: #2079d4;
-    background-image: url(/assets/partecipa-bg.svg);
-    background-position-x: center;
-    background-position-y: center;
-    background-repeat: no-repeat;
-    padding: 2rem 0;
+  background-color: #2079d4;
+  background-image: url(/assets/partecipa-bg.svg);
+  background-position-x: center;
+  background-position-y: center;
+  background-repeat: no-repeat;
+  padding: 2rem 0;
+}
+
+
+@media (min-width: 992px) {
+  .it-header-navbar-wrapper nav .navbar-collapsable .menu-wrapper {
+    background: rgba(255,255,255,0.2);
+  }
 }
