Fixed link to Camelot Flutter app

--- a/views/index.html
+++ b/views/index.html
@@ -299,7 +299,7 @@ I software che abilitano la collaborazione di comunità attraverso la rete sono 
 
 Il Progetto OpenRousseau offrirà la piena compatibilità applicativa con le 14 funzionalità erogate come servizio SAAS dalla Associazione Rousseau.
 
-Per fare ciò userà come Frontend mobile esattamente la stessa “app” per cellulare chiamata “Camelot Flutter”, sviluppata sin dall’inizio secondo paradigmi di software libero dall’attivista e sviluppatore Emanuel Mazzilli per conto della Associazione Rousseau.
+Per fare ciò userà come Frontend mobile esattamente la stessa “app” per cellulare chiamata <a href="https://github.com/associazione-rousseau/camelot-flutter">Camelot Flutter</a>, sviluppata sin dall’inizio secondo paradigmi di software libero dall’attivista e sviluppatore Emanuel Mazzilli per conto della Associazione Rousseau.
 
 Il Backend sarà invece basato sul software Ruby on Rails Decidim, a cui saranno apportati tutti i miglioramenti necessari (sempre rilasciati come codice libero e integrati nativamente nel software) per garantire la piena compatibilità con Camelot Flutter e con le 14 funzionalità del Backend Rousseau prodotto dalla medesima associazione.
 
