--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
     <meta name="generator" content="">
     <meta name="robots" content="noindex">
     
-    <title>Decidiamo! ma con tecnologia libera ed open source</title>
+    <title>Decidiamo! ma con tecnologia libera e open source</title>
     
     <!-- Bootstrap Italia CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-italia@1.4.1/dist/css/bootstrap-italia.min.css" rel="stylesheet">
@@ -179,7 +179,7 @@
             <div class="row">
                 <div class="col-12">
                     <h2 class="text-white pl-3 max-w-40 mt-5 mb-5">
-                        OpenRousseau è l’evoluzione libera ed aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive.<br>
+                        OpenRousseau è l’evoluzione libera e aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive.<br>
                         La sua natura di software libero permette la sovranità digitale, cioè l’uso indipendente del sistema da parte di qualsiasi organizzazione.
                     </h2>
                 </div>
@@ -277,7 +277,7 @@ La nostra associazione, per ora ancora informale, è [Decidiamo.it](http://decid
 
 ## Motivazioni
 
-Il Progetto OpenRousseau nasce dall’adozione di tecniche per la democrazia partecipata guardando primariamente all'esperienza del Movimento 5 Stelle con la nota “piattaforma Rousseau” e all’esperienza di adozione in Spagna di tecnologie simili, ma libere e decentralizzate.
+Il Progetto OpenRousseau nasce dalla volontà di promuovere l’adozione di tecniche per la democrazia partecipata guardando primariamente all'esperienza del Movimento 5 Stelle con la nota “piattaforma Rousseau” e all’esperienza di adozione in Spagna di tecnologie simili, ma libere e decentralizzate.
 
 Rispetto alla “piattaforma Rousseau”, che funziona come servizio erogato su sistemi proprietari di una società privata, gli obiettivi di OpenRousseau sono rendere:
 
@@ -405,7 +405,7 @@ Riteniamo che le piattaforme tecnologiche di Democrazia Partecipata debbano risp
                             </p>
                             <br>
                             <p>
-                                Questo sito è stato realizzato grazie all'importante contributo di tutti i membri della comunità open source, e in particolare alle sviluppatrici e designer coinvolti nei seguenti progetti:
+                                Questo sito è stato realizzato grazie all'importante contributo di tutti i membri della comunità open source, e in particolare alle donne e agli uomini coinvolti nello sviluppo, nel design e nella promozione seguenti progetti:
                                 <div class="link-list-wrapper">
                                     <ul class="footer-list link-list clearfix">
                                         <li><a href="https://www.dyne.org/software/webnomad/">Webnomad</a></li>
