--- a/views/index.html
+++ b/views/index.html
@@ -37,7 +37,7 @@
     <meta name="twitter:site" content="@https://twitter.com/OpenRousseau">
     <meta name="twitter:title" content="Decidiamo! ma con tecnologia libera ed open source!">
     <meta name="twitter:description"
-    content="Evoluzione libera ed aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive." />
+    content="Evoluzione libera e aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive." />
     <meta name="twitter:image" content="/img/large_picture.png">
     <link rel="twitter" type="text/html" href="http://twitter.com/OpenRousseau">
     
