--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
     
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@https://twitter.com/OpenRousseau">
-    <meta name="twitter:title" content="Decidiamo! ma con tecnologia libera ed open source!">
+    <meta name="twitter:title" content="Decidiamo! ma con tecnologia libera e open source!">
     <meta name="twitter:description"
     content="Evoluzione libera e aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive." />
     <meta name="twitter:image" content="/img/large_picture.png">
@@ -44,9 +44,9 @@
     <!-- Facebook -->
     <meta property="og:url" content="/">
     <meta property="og:title"
-    content="Decidiamo! ma con tecnologia libera ed open source!">
+    content="Decidiamo! ma con tecnologia libera e open source!">
     <meta property="og:description"
-    content="Evoluzione libera ed aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive." />
+    content="Evoluzione libera e aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive." />
     <meta property="og:type" content="website">
     <meta property="og:image" content="/img/favicons/social-card.png">
     <meta property="og:image:secure_url" content="/img/favicons/social-card.png">
