--- a/views/index.html
+++ b/views/index.html
@@ -37,19 +37,19 @@
     <meta name="twitter:site" content="@https://twitter.com/OpenRousseau">
     <meta name="twitter:title" content="Decidiamo! ma con tecnologia libera e open source!">
     <meta name="twitter:description"
-    content="Evoluzione libera e aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive." />
-    <meta name="twitter:image" content="/img/large_picture.png">
+		  content="Evoluzione libera e aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive." />
+    <meta name="twitter:image" content="https://openrousseau.org/assets/comunita_og.jpg">
     <link rel="twitter" type="text/html" href="http://twitter.com/OpenRousseau">
     
     <!-- Facebook -->
     <meta property="og:url" content="/">
     <meta property="og:title"
-    content="Decidiamo! ma con tecnologia libera e open source!">
+		  content="Decidiamo! ma con tecnologia libera e open source!">
     <meta property="og:description"
-    content="Evoluzione libera e aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive." />
+		  content="Evoluzione libera e aperta della piattaforma utilizzata dal Movimento 5 Stelle per prendere decisioni collettive." />
     <meta property="og:type" content="website">
-    <meta property="og:image" content="/img/favicons/social-card.png">
-    <meta property="og:image:secure_url" content="/img/favicons/social-card.png">
+    <meta property="og:image" content="https://openrousseau.org/assets/comunita_og.jpg">
+    <meta property="og:image:secure_url" content="https://openrousseau.org/assets/comunita_og.jpg">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
