--- a/views/index.html
+++ b/views/index.html
@@ -275,13 +275,15 @@ Riteniamo che la comunità informatica italiana con il progetto OpenRousseau pos
 
 La nostra associazione, per ora ancora informale, è [Decidiamo.it](http://decidiamo.it).
 
+Tra i promotori di questa iniziativa c'e' il portavoce [Denis "Jaromil" Roio](https://www.linkedin.com/in/jaromil/).
+
 ## Motivazioni
 
 Il Progetto OpenRousseau nasce dalla volontà di promuovere l’adozione di tecniche per la democrazia partecipata guardando primariamente all'esperienza del Movimento 5 Stelle con la nota “piattaforma Rousseau” e all’esperienza di adozione in Spagna di tecnologie simili, ma libere e decentralizzate.
 
 Rispetto alla “piattaforma Rousseau”, che funziona come servizio erogato su sistemi proprietari di una società privata, gli obiettivi di OpenRousseau sono rendere:
 
-1. Il codice open source, offrendo quindi garanzia di sicurezza e trasparenza della piattaforma.
+1. Il codice libero ed open source, offrendo quindi garanzia di sicurezza e trasparenza della piattaforma.
 2. Il sistema indipendente, mantenendo i dati e le decisioni di coordinamento dei cittadini in mano a loro stessi: ognuno potrà installare, configurare e gestire il sistema sui propri computer.
 3. La piattaforma disponibile all’uso da parte di qualsiasi soggetto politico e istituzionale, promuovendone l’uso come strumento di democrazia partecipativa.
 4. Il sistema conforme alle direttive vigenti sulla privacy e la sicurezza degli utenti, prendendo come riferimento gli standard europei sulla democrazia partecipata.
@@ -305,7 +307,8 @@ Il Backend sarà invece basato sul software Ruby on Rails Decidim, a cui saranno
 
 ## Democrazia Partecipata secondo le Linee Guida dell’Agenzia Italia Digitale
 
-Riteniamo che le piattaforme tecnologiche di Democrazia Partecipata debbano rispettare i più rigidi criteri di trasparenza, riuso e sovranità digitale secondo i medesimi criteri definiti dall'Agenzia per l’Italia Digitale (Ora Ministero Innovazione Tecnologica): **il software deve essere completamente open source**.
+Riteniamo che le piattaforme tecnologiche di Democrazia Partecipata debbano rispettare i più rigidi criteri di trasparenza, riuso e sovranità digitale secondo i medesimi criteri definiti dall'Agenzia per l’Italia Digitale (Ora Ministero Innovazione Tecnologica): **il software deve essere completamente libero ed open source**.
+
                 </markdown>
             </div>
         </div>
