--- a/views/index.html
+++ b/views/index.html
@@ -275,7 +275,7 @@ Riteniamo che la comunità informatica italiana con il progetto OpenRousseau pos
 
 La nostra associazione, per ora ancora informale, è [Decidiamo.it](http://decidiamo.it).
 
-Tra i promotori di questa iniziativa c'e' il portavoce [Denis "Jaromil" Roio](https://www.linkedin.com/in/jaromil/).
+Tra i promotori di questa iniziativa c'e' il portavoce [Denis Roio](https://www.linkedin.com/in/jaromil/) meglio conosciuto nella comunita' hacker italiana come [Jaromil](https://www.reddit.com/r/ItalyInformatica/comments/d6r8jh/ciao_sono_jaromil_di_dyneorg_e_questo_e_il_mio_ama/).
 
 ## Motivazioni
 
@@ -438,19 +438,19 @@ Riteniamo che le piattaforme tecnologiche di Democrazia Partecipata debbano risp
         </div>
     </footer>
                 
-    <div class="cookiebar bg-dark p-4 hide" aria-hidden="true" aria-live="polite">
-        <div class="container">
-            <div class="row d-flex align-items-center">
-                <div class="col-12 col-md-8">
-                    <span class="text-white small">Questo sito utilizza cookie tecnici, analytics e di terze parti.<br>Proseguendo nella navigazione accetti l’utilizzo dei cookie.</span>
-                </div>
-                <div class="col-12 col-md-4 mt-4 mt-md-0 d-flex justify-content-end">
-                    <a class="btn btn-link" href="/privacy-policy/">Privacy policy</a>
-                    <button class="btn btn-primary mr-2" data-accept="cookiebar">Accetto</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- <div class="cookiebar bg-dark p-4 hide" aria-hidden="true" aria-live="polite"> -->
+    <!--     <div class="container"> -->
+    <!--         <div class="row d-flex align-items-center"> -->
+    <!--             <div class="col-12 col-md-8"> -->
+    <!--                 <span class="text-white small">Questo sito utilizza cookie tecnici, analytics e di terze parti.<br>Proseguendo nella navigazione accetti l’utilizzo dei cookie.</span> -->
+    <!--             </div> -->
+    <!--             <div class="col-12 col-md-4 mt-4 mt-md-0 d-flex justify-content-end"> -->
+    <!--                 <a class="btn btn-link" href="/privacy-policy/">Privacy policy</a> -->
+    <!--                 <button class="btn btn-primary mr-2" data-accept="cookiebar">Accetto</button> -->
+    <!--             </div> -->
+    <!--         </div> -->
+    <!--     </div> -->
+    <!-- </div> -->
     
     <a href="#" aria-hidden="true" data-attribute="back-to-top" class="back-to-top">
         <svg class="icon icon-light">
