--- a/views/index.html
+++ b/views/index.html
@@ -298,12 +298,15 @@ I software che abilitano la collaborazione di comunità attraverso la rete sono 
 
 * Frontend: Il Client (cioè la “app” per il telefonino o il sito web)
 * Backend: Il Server (che custodisce e tratta i dati, garantisce l’integrità e funzionalità)
+* Algoritmi: La Crittografia (che garantisce l'integrita' dei voti e dello spoglio)
 
 Il Progetto OpenRousseau offrirà la piena compatibilità applicativa con le 14 funzionalità erogate come servizio SAAS dalla Associazione Rousseau.
 
 Per fare ciò userà come Frontend mobile esattamente la stessa “app” per cellulare chiamata <a href="https://github.com/associazione-rousseau/camelot-flutter">Camelot Flutter</a>, sviluppata sin dall’inizio secondo paradigmi di software libero dall’attivista e sviluppatore Emanuel Mazzilli per conto della Associazione Rousseau.
 
 Il Backend sarà invece basato sul software Ruby on Rails Decidim, a cui saranno apportati tutti i miglioramenti necessari (sempre rilasciati come codice libero e integrati nativamente nel software) per garantire la piena compatibilità con Camelot Flutter e con le 14 funzionalità del Backend Rousseau prodotto dalla medesima associazione.
+
+La Crittografia e' basata sulla ricerca condotta dalla fondazione Dyne.org per il progetto faro Europeo [DECODE](https://decodeproject.eu) in collaborazione con DECIDIM, in particolare adottando il [flusso di petizione sicura in Zencode](https://dev.zenroom.org/#/pages/zencode-scenarios-petition). 
 
 ## Democrazia Partecipata secondo le Linee Guida dell’Agenzia Italia Digitale
 
